add Doctrine Connection bridge

--- a/services.yaml
+++ b/services.yaml
@@ -1,8 +1,10 @@
 services:
   _defaults:
     autowire: true
-    public: false
+    public: true
+
+  D3\OxidServiceBridges\Doctrine\DBAL\ConnectionBridgeInterface:
+    class: D3\OxidServiceBridges\Doctrine\DBAL\ConnectionBridge
 
   D3\OxidServiceBridges\Internal\Framework\Module\Path\ModulePathResolverBridgeInterface:
     class: D3\OxidServiceBridges\Internal\Framework\Module\Path\ModulePathResolverBridge
-    public: true
