--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     "MIT"
   ],
   "require": {
-    "php": "^7.0 || ^8.0",
-    "oxid-esales/oxideshop-ce": "6.5 - 7.0"
+    "php": "^8.0",
+    "oxid-esales/oxideshop-ce": "7.0 - 7.0"
   },
   "autoload": {
     "psr-4": {
